// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ce-tooltip renders 1`] = `
<ce-tooltip type="info">
  <mock:shadow-root>
    <span class="tooltip tooltip--info" part="base">
      <slot></slot>
    </span>
  </mock:shadow-root>
</ce-tooltip>
`;

exports[`sc-tooltip renders 1`] = `
<sc-tooltip type="info">
  <mock:shadow-root>
    <span class="tooltip tooltip--info" part="base">
      <slot></slot>
    </span>
  </mock:shadow-root>
</sc-tooltip>
`;
